===v4.5.8===
 * Internal Cooldown icons can now be triggered by a summon event (for the healing priest t12 4pc bonus)
 * Spell Cast conditions can now match a name.
 * Chat channels are now a valid text output destination.

===v4.5.7===
 * Bug Fixes:
 ** (r235) TellMeWhen_Options-4.5.6.lua:1690 attempt to index field "IgnoreRunes" (a nil value)
 ** (r236) Dispel types should now always function properly

===v4.5.6===
 * Moved the default icon type into its own type file, because it technically is nothing more than another icon type.
 * Added clarification for icon types that will accept no name to check everything.
 * Added a help popup for the stop watch icon.
 * You can now right-click an entry in the suggestion list to insert the opposite type of what is being typed in.
 * The option "Show timer text" no longer requires that "Show timer" be enabled. It does still require OmniCC, though.
 * Bug Fixes:
 ** (r219) Implemented a method to determine if an export string has become corrupt due to the source's formatting
 ** (r220) Fixed overlay bar frame levels
 ** (r226) Dispel types should now work regardless of capitalization
 ** (r230) Fixed overlapping checkboxes, and completely revamped the way that the left column in the icon editor works to prevent this from ever occurring again.
 ** (r231) Fixed missing settings caused by the left-column overhaul
 ** (r232) Meta icons now inherit timer settings properly
 ** (r233) Fixed some deadly recusion
 
===v4.5.5===
 * Added Brazillian Portuguese localization file. Translators wanted!
 * Implemented a method of determining of an import string has become corrupt by using WikiCreole formatting on Curse (and then fix it if it has been).
 * Bug Fixes:
 ** (r213) The cooldown bar offset editbox now uses TellMeWhen_TimeEditBoxTemplate (and on a related note, huge time strings will now format to the year level for fun)

===v4.5.4===
 * New icon type: Rune Cooldown. Does what you would expect it to do.